# AGD-G

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  modal_target_gen_test.py  patch.py  pyproject.toml  requirements.txt
.github/scripts/: update_readme_coverage.py
.github/workflows/: coverage.yml  modal-coverage.yml  modal-deploy.yml  pages.yml  terraform-validate.yml
A3/: README.md  custom_eval.py  nanochat_modal.py
A4/analysis_script/: analyze_units_python_usage.py  eda_gsm8k_preds.py  scorers.py
A4/changed_files/: chat_eval.py  nanochat_modal.py
agd/: .coveragerc  README.md  agd.py  attackvlm.py  attackvlm_adapter.py  eval_chartx_attackvlm_modal.py  interfaces.py  modal_attack.py  modal_rgf.py  pipeline_chartx_attackvlm_modal.py  pytest.ini  requirements-test.txt  requirements.txt  run_chartx_attackvlm.py  run_chartx_attackvlm_modal.py
agd/core/: attack.py  attackvlm_adapter.py  interfaces.py
agd/profiling/: profiler.py
agd/scoring/: eval.py
dataPipeline/: chartX.py
docs/: modal-github-pages-plan.md
frontend/: app.js  config.js  index.html  styles.css
importer/: chartbench.py  import_chartbench.py
modal/: .coveragerc  aws.py  chartX.py  chartbench_pipeline.py  chartqax_pipeline.py  config.py  create_table.py  preprocess_charts.py  pytest.ini  rds_example.py  requirements-test.txt  requirements.txt  s3_example.py  verify.py
modal_run/: attack.py  evaluate.py  image.py  ingest.py  modal_attack.py  query.py  target.py  web_api.py
preprocess/: preprocess_chart.py
profiling/: profiler.py
(+134 files in other folders)
