[project]
name = "agdg"
version = "0.1.0"
dependencies = [
	"accelerate",
	"boto3",
	"datasets",
	"diffusers",
	"fastapi",
	"huggingface_hub",
	"httpx",
	"modal",
	"numpy",
	"pillow",
	"psycopg2-binary",
	"python-multipart",
	"pytest",
	"pytest-cov",
	"python-dotenv",
	"sentence-transformers",
	"tf-keras",
	"torch",
	"torchvision",
	"tqdm",
	"transformers>=4.49.0",
	"qwen-vl-utils",
]

[tool.setuptools.packages.find]
where = ["src"]
