[project]
name = "agdg"
version = "0.1.0"
dependencies = [
	"accelerate",
	"boto3",
	"datasets",
	"diffusers",
	"huggingface_hub",
	"modal",
	"numpy",
	"pillow",
	"psycopg2-binary",
	"pytest",
	"pytest-cov",
	"python-dotenv",
	"sentence-transformers",
	"tf-keras",
	"torch",
	"torchvision",
	"tqdm",
	"transformers>=4.49.0",
	"qwen-vl-utils",
]

[project.scripts]
agdg = "agdg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
